@@ -4,4 +4,7 @@ case class ConfigParameter[T](
   val name: String,
   val section: String,
   val default: T,
-  val description: String)
+  val description: String) extends DataFrameOption {
+
+  override val optionName = name.replaceAll("\\.", "\\_")
+}
