@@ -1,4 +1,6 @@
- * Adds the ability to add additional Predicate Pushdown Rules at Runtime (SPARKC-308) 
+ * Removed the ability to specify cluster alias directly and added some helper methods which make it easier to configure
+   Cassandra related data frames (SPARKC-289)
+ * Adds the ability to add additional Predicate Pushdown Rules at Runtime (SPARKC-308)
  * Upgrade Spark to 1.6.0 and add Apache Snapshot repository to resolvers (SPARKC-272, SPARKC-298, SPARKC-305)
 
 ********************************************************************************
